RESOLVED FIXED106960
ASSERT(!m_queue.killed() && m_threadID) hit in StorageThread::scheduleTask on low memory warning
https://bugs.webkit.org/show_bug.cgi?id=106960
Summary ASSERT(!m_queue.killed() && m_threadID) hit in StorageThread::scheduleTask on...
Antti Koivisto
Reported 2013-01-15 16:51:20 PST
Memory clearing task is getting scheduled to a killed thread.
Attachments
patch (2.94 KB, patch)
2013-01-15 17:01 PST, Antti Koivisto
mrowe: review+
Antti Koivisto
Comment 1 2013-01-15 17:01:03 PST
Antti Koivisto
Comment 2 2013-01-15 17:09:20 PST
Note You need to log in before you can comment on or make changes to this bug.