ASSERT(!m_queue.killed() && m_threadID) hit in StorageThread::scheduleTask on low memory warning https://bugs.webkit.org/show_bug.cgi?id=106960

Reviewed by Mark Rowe.

We were scheduling a memory clearing task to terminated StorageThreads.
        
Remove thread from the active thread list when terminate is scheduled. Add when thread is started.

* storage/StorageThread.cpp:
(WebCore::activeStorageThreads):
(WebCore::StorageThread::StorageThread):
(WebCore::StorageThread::~StorageThread):
(WebCore::StorageThread::start):
(WebCore::StorageThread::terminate):
(WebCore::StorageThread::releaseFastMallocFreeMemoryInAllThreads):



git-svn-id: svn://svn.chromium.org/blink/trunk@139811 bbb929c8-8fbe-4397-9dbb-9b2b20218538