third_party/WebKit/Source/WebCore/storage/StorageThread.cpp
@@ -35,7 +35,7 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
 
 namespace WebCore {
 
-static HashSet<StorageThread*>& storageThreads()
+static HashSet<StorageThread*>& activeStorageThreads()
 {
     ASSERT(isMainThread());
     DEFINE_STATIC_LOCAL(HashSet<StorageThread*>, threads, ());
@@ -51,14 +51,12 @@ StorageThread::StorageThread()
     : m_threadID(0)
 {
     ASSERT(isMainThread());
-    storageThreads().add(this);
 }
 
 StorageThread::~StorageThread()
 {
     ASSERT(isMainThread());
     ASSERT(!m_threadID);
-    storageThreads().remove(this);
 }
 
 bool StorageThread::start()
@@ -66,6 +64,7 @@ bool StorageThread::start()
     ASSERT(isMainThread());
     if (!m_threadID)
         m_threadID = createThread(StorageThread::threadEntryPointCallback, this, "WebCore: LocalStorage");
+    activeStorageThreads().add(this);
     return m_threadID;
 }
 
@@ -96,6 +95,7 @@ void StorageThread::terminate()
 {
     ASSERT(isMainThread());
     ASSERT(!m_queue.killed() && m_threadID);
+    activeStorageThreads().remove(this);
     // Even in weird, exceptional cases, don't wait on a nonexistent thread to terminate.
     if (!m_threadID)
         return;
@@ -114,7 +114,7 @@ void StorageThread::performTerminate()
 
 void StorageThread::releaseFastMallocFreeMemoryInAllThreads()
 {
-    HashSet<StorageThread*>& threads = storageThreads();
+    HashSet<StorageThread*>& threads = activeStorageThreads();
     HashSet<StorageThread*>::iterator end = threads.end();
     for (HashSet<StorageThread*>::iterator it = threads.begin(); it != end; ++it)
         (*it)->scheduleTask(StorageTask::createReleaseFastMallocFreeMemory());
